--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
+name: CI
+on: [push]
 jobs:
-  run_tests:
-    runs-on: ubuntu-20.04
-    steps:
-    - uses: actions/checkout@v2
-    - name: Run script file
-      run: |
-         chmod +x ./rdp.sh
-         ./rdp.sh
-      shell: bash
+build-test:
+runs-on: ubuntu-latest
+steps:
+- name: Running PHPUnit Tests
+run: script.sh
